Replace the git:// with https:// in 11 places

--- a/2017/Users-Meeting/Workshops/Engineering-OMERO-IDR/bower.json
+++ b/2017/Users-Meeting/Workshops/Engineering-OMERO-IDR/bower.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "ttps://github.com/hakimel/reveal.js.git"
   },
   "ignore": [
     "**/.*",
