--- a/2013/fs-workshop-paris/package.json
+++ b/2013/fs-workshop-paris/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "https://github.com/hakimel/reveal.js.git"
   },
   "engines": {
     "node": "~0.8.0"
