--- a/2017/Users-Meeting/Workshops/Engineering-OMERO-IDR/package.json
+++ b/2017/Users-Meeting/Workshops/Engineering-OMERO-IDR/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "https://github.com/hakimel/reveal.js.git"
   },
   "engines": {
     "node": ">=4.0.0"
